add layout list

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,48 +1,575 @@
-.btn-export {
-    margin: 0 2px !important;
-    background: none !important;
-    border: 1px solid #3c8dbc !important;
-    color: #3c8dbc !important;
-}
-
-.btn-export:hover {
-    background: #3c8dbc !important;
-    color: #ffffff !important;
-}
-
-.btn-default {
-    margin: 0 2px !important;
-    background: #606266 !important;
-    border: 1px solid #606266 !important;
-    color: #ffffff !important;
-}
-
-.btn-default:hover {
-    background: #ffffff !important;
-    color: #606266 !important;
-}
-
-.btn-primary {
-    margin: 0 2px !important;
-    background: #3c8dbc !important;
-    border: 1px solid #ffffff !important;
-    color: #ffffff !important;
-}
-
-.btn-primary:hover {
-    background: #3c8dbc !important;
-    border: 1px solid #ffffff !important;
-    color: #ffffff !important;
-    opacity: .7 !important;
-}
-
 .form-control {
     border-radius: 5px !important;
 }
 
-.rpd-edit{
+.rpd-edit {
     background: #ffffff !important;
     padding: 2% 10% !important;
     border-radius: 5px !important;
+}
+
+.el-button {
+    padding: 8px 18px !important;
+}
+
+.btn {
+    display: inline-block !important;
+    line-height: 1 !important;
+    white-space: nowrap !important;
+    cursor: pointer !important;
+    background: #fff !important;
+    border: 1px solid #dcdfe6 !important;
+    color: #606266 !important;
+    -webkit-appearance: none !important;
+    text-align: center !important;
+    -webkit-box-sizing: border-box !important;
+    box-sizing: border-box !important;
+    outline: 0 !important;
+    margin: 0 !important;
+    -webkit-transition: .1s !important;
+    transition: .1s !important;
+    font-weight: 500 !important;
+    padding: 8px 18px !important;
+    /*padding: 12px 20px !important;*/
+    font-size: 14px !important;
+    border-radius: 4px !important;
+}
+
+.btn + .btn {
+    margin-left: 10px !important;
+}
+
+.btn:focus, .btn:hover {
+    color: #409EFF !important;
+    border-color: #c6e2ff !important;
+    background-color: #ecf5ff !important;
+}
+
+.btn:active {
+    color: #3a8ee6 !important;
+    border-color: #3a8ee6 !important;
+    outline: 0 !important;
+}
+
+.btn::-moz-focus-inner {
+    border: 0 !important;
+}
+
+.btn [class*=el-icon-] + span {
+    margin-left: 5px !important;
+}
+
+.btn.is-plain:focus, .btn.is-plain:hover {
+    background: #fff !important;
+    border-color: #409EFF !important;
+    color: #409EFF !important;
+}
+
+.btn.is-active, .btn.is-plain:active {
+    color: #3a8ee6 !important;
+    border-color: #3a8ee6 !important;
+}
+
+.btn.is-plain:active {
+    background: #fff !important;
+    outline: 0 !important;
+}
+
+.btn.is-disabled, .btn.is-disabled:focus, .btn.is-disabled:hover {
+    color: #c0c4cc !important;
+    cursor: not-allowed !important;
+    background-image: none !important;
+    background-color: #fff !important;
+    border-color: #ebeef5 !important;
+}
+
+.btn.is-disabled.btn-text {
+    background-color: transparent !important;
+}
+
+.btn.is-disabled.is-plain, .btn.is-disabled.is-plain:focus, .btn.is-disabled.is-plain:hover {
+    background-color: #fff !important;
+    border-color: #ebeef5 !important;
+    color: #c0c4cc !important;
+}
+
+.btn.is-loading {
+    position: relative !important;
+    pointer-events: none !important;
+}
+
+.btn.is-loading:before {
+    pointer-events: none !important;
+    content: '' !important;
+    position: absolute !important;
+    left: -1px !important;
+    top: -1px !important;
+    right: -1px !important;
+    bottom: -1px !important;
+    border-radius: inherit !important;
+    background-color: rgba(255, 255, 255, .35) !important;
+}
+
+.btn.is-round {
+    border-radius: 20px !important;
+    padding: 12px 23px !important;
+}
+
+.btn-primary {
+    color: #fff !important;
+    background-color: #409EFF !important;
+    border-color: #409EFF !important;
+}
+
+.btn-primary:focus, .btn-primary:hover {
+    background: #66b1ff !important;
+    border-color: #66b1ff !important;
+    color: #fff !important;
+}
+
+.btn-primary.is-active, .btn-primary:active {
+    background: #3a8ee6 !important;
+    border-color: #3a8ee6 !important;
+    color: #fff !important;
+}
+
+.btn-primary:active {
+    outline: 0 !important;
+}
+
+.btn-primary.is-disabled, .btn-primary.is-disabled:active, .btn-primary.is-disabled:focus, .btn-primary.is-disabled:hover {
+    color: #fff !important;
+    background-color: #a0cfff !important;
+    border-color: #a0cfff !important;
+}
+
+.btn-primary.is-plain {
+    color: #409EFF !important;
+    background: #ecf5ff !important;
+    border-color: #b3d8ff !important;
+}
+
+.btn-primary.is-plain:focus, .btn-primary.is-plain:hover {
+    background: #409EFF !important;
+    border-color: #409EFF !important;
+    color: #fff !important;
+}
+
+.btn-primary.is-plain:active {
+    background: #3a8ee6 !important;
+    border-color: #3a8ee6 !important;
+    color: #fff !important;
+    outline: 0 !important;
+}
+
+.btn-primary.is-plain.is-disabled, .btn-primary.is-plain.is-disabled:active, .btn-primary.is-plain.is-disabled:focus, .btn-primary.is-plain.is-disabled:hover {
+    color: #8cc5ff !important;
+    background-color: #ecf5ff !important;
+    border-color: #d9ecff !important;
+}
+
+.btn-success {
+    color: #fff !important;
+    background-color: #67c23a !important;
+    border-color: #67c23a !important;
+}
+
+.btn-success:focus, .btn-success:hover {
+    background: #85ce61 !important;
+    border-color: #85ce61 !important;
+    color: #fff !important;
+}
+
+.btn-success.is-active, .btn-success:active {
+    background: #5daf34 !important;
+    border-color: #5daf34 !important;
+    color: #fff !important;
+}
+
+.btn-success:active {
+    outline: 0 !important;
+}
+
+.btn-success.is-disabled, .btn-success.is-disabled:active, .btn-success.is-disabled:focus, .btn-success.is-disabled:hover {
+    color: #fff !important;
+    background-color: #b3e19d !important;
+    border-color: #b3e19d !important;
+}
+
+.btn-success.is-plain {
+    color: #67c23a !important;
+    background: #f0f9eb !important;
+    border-color: #c2e7b0 !important;
+}
+
+.btn-success.is-plain:focus, .btn-success.is-plain:hover {
+    background: #67c23a !important;
+    border-color: #67c23a !important;
+    color: #fff !important;
+}
+
+.btn-success.is-plain:active {
+    background: #5daf34 !important;
+    border-color: #5daf34 !important;
+    color: #fff !important;
+    outline: 0 !important;
+}
+
+.btn-success.is-plain.is-disabled, .btn-success.is-plain.is-disabled:active, .btn-success.is-plain.is-disabled:focus, .btn-success.is-plain.is-disabled:hover {
+    color: #a4da89 !important;
+    background-color: #f0f9eb !important;
+    border-color: #e1f3d8 !important;
+}
+
+.btn-warning {
+    color: #fff !important;
+    background-color: #e6a23c !important;
+    border-color: #e6a23c !important;
+}
+
+.btn-warning:focus, .btn-warning:hover {
+    background: #ebb563 !important;
+    border-color: #ebb563 !important;
+    color: #fff !important;
+}
+
+.btn-warning.is-active, .btn-warning:active {
+    background: #cf9236 !important;
+    border-color: #cf9236 !important;
+    color: #fff !important;
+}
+
+.btn-warning:active {
+    outline: 0 !important;
+}
+
+.btn-warning.is-disabled, .btn-warning.is-disabled:active, .btn-warning.is-disabled:focus, .btn-warning.is-disabled:hover {
+    color: #fff !important;
+    background-color: #f3d19e !important;
+    border-color: #f3d19e !important;
+}
+
+.btn-warning.is-plain {
+    color: #e6a23c !important;
+    background: #fdf6ec !important;
+    border-color: #f5dab1 !important;
+}
+
+.btn-warning.is-plain:focus, .btn-warning.is-plain:hover {
+    background: #e6a23c !important;
+    border-color: #e6a23c !important;
+    color: #fff !important;
+}
+
+.btn-warning.is-plain:active {
+    background: #cf9236 !important;
+    border-color: #cf9236 !important;
+    color: #fff !important;
+    outline: 0 !important;
+}
+
+.btn-warning.is-plain.is-disabled, .btn-warning.is-plain.is-disabled:active, .btn-warning.is-plain.is-disabled:focus, .btn-warning.is-plain.is-disabled:hover {
+    color: #f0c78a !important;
+    background-color: #fdf6ec !important;
+    border-color: #faecd8 !important;
+}
+
+.btn-danger {
+    color: #fff !important;
+    background-color: #f56c6c !important;
+    border-color: #f56c6c !important;
+}
+
+.btn-danger:focus, .btn-danger:hover {
+    background: #f78989 !important;
+    border-color: #f78989 !important;
+    color: #fff !important;
+}
+
+.btn-danger.is-active, .btn-danger:active {
+    background: #dd6161 !important;
+    border-color: #dd6161 !important;
+    color: #fff !important;
+}
+
+.btn-danger:active {
+    outline: 0 !important;
+}
+
+.btn-danger.is-disabled, .btn-danger.is-disabled:active, .btn-danger.is-disabled:focus, .btn-danger.is-disabled:hover {
+    color: #fff !important;
+    background-color: #fab6b6 !important;
+    border-color: #fab6b6 !important;
+}
+
+.btn-danger.is-plain {
+    color: #f56c6c !important;
+    background: #fef0f0 !important;
+    border-color: #fbc4c4 !important;
+}
+
+.btn-danger.is-plain:focus, .btn-danger.is-plain:hover {
+    background: #f56c6c !important;
+    border-color: #f56c6c !important;
+    color: #fff !important;
+}
+
+.btn-danger.is-plain:active {
+    background: #dd6161 !important;
+    border-color: #dd6161 !important;
+    color: #fff !important;
+    outline: 0 !important;
+}
+
+.btn-danger.is-plain.is-disabled, .btn-danger.is-plain.is-disabled:active, .btn-danger.is-plain.is-disabled:focus, .btn-danger.is-plain.is-disabled:hover {
+    color: #f9a7a7 !important;
+    background-color: #fef0f0 !important;
+    border-color: #fde2e2 !important;
+}
+
+.btn-info {
+    color: #fff !important;
+    background-color: #909399 !important;
+    border-color: #909399 !important;
+}
+
+.btn-info:focus, .btn-info:hover {
+    background: #a6a9ad !important;
+    border-color: #a6a9ad !important;
+    color: #fff !important;
+}
+
+.btn-info.is-active, .btn-info:active {
+    background: #82848a !important;
+    border-color: #82848a !important;
+    color: #fff !important;
+}
+
+.btn-info:active {
+    outline: 0 !important;
+}
+
+.btn-info.is-disabled, .btn-info.is-disabled:active, .btn-info.is-disabled:focus, .btn-info.is-disabled:hover {
+    color: #fff !important;
+    background-color: #c8c9cc !important;
+    border-color: #c8c9cc !important;
+}
+
+.btn-info.is-plain {
+    color: #909399 !important;
+    background: #f4f4f5 !important;
+    border-color: #d3d4d6 !important;
+}
+
+.btn-info.is-plain:focus, .btn-info.is-plain:hover {
+    background: #909399 !important;
+    border-color: #909399 !important;
+    color: #fff !important;
+}
+
+.btn-info.is-plain:active {
+    background: #82848a !important;
+    border-color: #82848a !important;
+    color: #fff !important;
+    outline: 0 !important;
+}
+
+.btn-info.is-plain.is-disabled, .btn-info.is-plain.is-disabled:active, .btn-info.is-plain.is-disabled:focus, .btn-info.is-plain.is-disabled:hover {
+    color: #bcbec2 !important;
+    background-color: #f4f4f5 !important;
+    border-color: #e9e9eb !important;
+}
+
+.btn-text, .btn-text.is-disabled, .btn-text.is-disabled:focus, .btn-text.is-disabled:hover, .btn-text:active {
+    border-color: transparent !important;
+}
+
+.btn-medium {
+    padding: 10px 20px !important;
+    font-size: 14px !important;
+    border-radius: 4px !important;
+}
+
+.btn-mini, .btn-small {
+    font-size: 12px !important;
+    border-radius: 3px !important;
+}
+
+.btn-medium.is-round {
+    padding: 10px 20px !important;
+}
+
+.btn-small, .btn-small.is-round {
+    padding: 9px 15px !important;
+}
+
+.btn-mini, .btn-mini.is-round {
+    padding: 7px 15px !important;
+}
+
+.btn-text {
+    color: #409EFF !important;
+    background: 0 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
+.btn-text:focus, .btn-text:hover {
+    color: #66b1ff !important;
+    border-color: transparent !important;
+    background-color: transparent !important;
+}
+
+.btn-text:active {
+    color: #3a8ee6 !important;
+    background-color: transparent !important;
+}
+
+.btn-group {
+    display: inline-block !important;
+    vertical-align: middle !important;
+}
+
+.btn-group::after, .btn-group::before {
+    display: table !important;
+    content: "" !important;
+}
+
+.el-checkbox, .el-checkbox__input {
+    display: inline-block !important;
+    position: relative !important;
+    white-space: nowrap !important;
+}
+
+.btn-group::after {
+    clear: both !important;
+}
+
+.btn-group .btn {
+    float: left !important;
+    position: relative !important;
+}
+
+.btn-group .btn + .btn {
+    margin-left: 0 !important;
+}
+
+.btn-group .btn:first-child {
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+}
+
+.btn-group .btn:last-child {
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+}
+
+.btn-group .btn:first-child:last-child {
+    border-radius: 4px !important;
+}
+
+.btn-group .btn:not(:first-child):not(:last-child) {
+    border-radius: 0 !important;
+}
+
+.btn-group .btn:not(:last-child) {
+    margin-right: -1px !important;
+}
+
+.btn-group .btn.is-active, .btn-group .btn:active, .btn-group .btn:focus, .btn-group .btn:hover {
+    z-index: 1 !important;
+}
+
+.btn-group .btn-primary:first-child {
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-primary:last-child {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-primary:not(:first-child):not(:last-child) {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-success:first-child {
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-success:last-child {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-success:not(:first-child):not(:last-child) {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-warning:first-child {
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-warning:last-child {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-warning:not(:first-child):not(:last-child) {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-danger:first-child {
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-danger:last-child {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-danger:not(:first-child):not(:last-child) {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-info:first-child {
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-info:last-child {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+}
+
+.btn-group .btn-info:not(:first-child):not(:last-child) {
+    border-left-color: rgba(255, 255, 255, .5) !important;
+    border-right-color: rgba(255, 255, 255, .5) !important;
+}
+
+
+.pagination>li+li{
+    display: inline-block;
+    margin-left: 6px;
+}
+.pagination>li>a, .pagination>li>span {
+    position: relative;
+    float: left;
+    font-size: 14px;
+    text-align: center;
+    width: 28px;
+    height: 28px;
+    padding: 7px 0;
+    line-height: 12px;
+    color: #333;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #e2e7eb;
+    border-radius: 4px;
+}
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+    z-index: 2;
+    color: #fff;
+    cursor: default;
+    background-color: #409EFF;
+    border-color: #409EFF;
 }
 
